force-app/main/default/objects/CM_Sprint__c/CM_Sprint__c.object-meta.xml
<CustomObject>
    <description>CM (Change Management) Object used to define a Sprint or Release of new code to production.</description>
    <label>Sprint</label>
    <nameField>
        <label>Sprint Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sprints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>