force-app/main/default/objects/CM_Sprint__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Flag used in the Sprint filter on Backlog Item that allows BLs to see only Active Sprints</description>
    <inlineHelpText>Flag used in the Sprint filter on Backlog Item that allows BLs to see only Active Sprints</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>