force-app/main/default/objects/CM_Sprint__c/fields/Auto_Set_Dates__c.field-meta.xml
<CustomField>
    <fullName>Auto_Set_Dates__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If checked this will automatically calculate the dates based on the Release Date</inlineHelpText>
    <label>Auto Set Dates</label>
    <type>Checkbox</type>
</CustomField>