force-app/main/default/objects/CM_Sprint__c/fields/Base_Tag__c.field-meta.xml
<CustomField>
    <fullName>Base_Tag__c</fullName>
    <description>The github.com tag (or current source code control system) that the sprint was based from.</description>
    <inlineHelpText>Example: "2011Feb-postdev"</inlineHelpText>
    <label>Base Tag</label>
    <length>20</length>
    <type>Text</type>
</CustomField>