force-app/main/default/objects/CM_Sprint__c/fields/QA_Deploy_Date__c.field-meta.xml
<CustomField>
    <fullName>QA_Deploy_Date__c</fullName>
    <inlineHelpText>All new code should be deployed to the QA server by this date.</inlineHelpText>
    <label>QA Deploy Date</label>
    <type>Date</type>
</CustomField>