force-app/main/default/objects/CM_Sprint__c/fields/QA_Signoff_Approver__c.field-meta.xml
<CustomField>
    <fullName>QA_Signoff_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who can send QA signoff</description>
    <inlineHelpText>User who can send QA signoff</inlineHelpText>
    <label>QA Signoff Approver</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>Quality Assurance Lead</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Sprints1</relationshipName>
    <type>Lookup</type>
</CustomField>