force-app/main/default/objects/CM_Sprint__c/fields/QA_Signoff_Date__c.field-meta.xml
<CustomField>
    <fullName>QA_Signoff_Date__c</fullName>
    <description>The date all backlog items must be signed off</description>
    <inlineHelpText>The date all backlog items must be signed off</inlineHelpText>
    <label>QA Signoff Date</label>
    <type>Date</type>
</CustomField>