force-app/main/default/objects/CM_Sprint__c/fields/QA_Target__c.field-meta.xml
<CustomField>
    <fullName>QA_Target__c</fullName>
    <label>QA Target</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PQA</fullName>
                <default>true</default>
                <label>PQA</label>
            </value>
            <value>
                <fullName>MQA</fullName>
            </value>
            <value>
                <fullName>mp2qa</fullName>
            </value>
            <value>
                <fullName>etltest</fullName>
            </value>
            <value>
                <fullName>frouat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>