force-app/main/default/objects/CM_Sprint__c/fields/Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Release_Date__c</fullName>
    <description>Date the sprint backlog items will be deployed to production</description>
    <inlineHelpText>Date the sprint backlog items will be deployed to production</inlineHelpText>
    <label>Release Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>