force-app/main/default/objects/CM_Sprint__c/fields/Resource_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Resource_Capacity__c</fullName>
    <description>Total number of hours Resources are available for this sprint.</description>
    <label>Resource Capacity</label>
    <summarizedField>CM_Capacity__c.Hours_Available__c</summarizedField>
    <summaryForeignKey>CM_Capacity__c.Sprint__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>