force-app/main/default/objects/CM_Sprint__c/fields/RFC__c.field-meta.xml
<CustomField>
    <fullName>RFC__c</fullName>
    <description>Request for change id associated with this release.</description>
    <inlineHelpText>Request for change id associated with this release.</inlineHelpText>
    <label>RFC</label>
    <length>10</length>
    <type>Text</type>
</CustomField>