force-app/main/default/objects/CM_Sprint__c/fields/Signoff_Required_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Signoff_Required_Date_Time__c</fullName>
    <description>The cut off date and time</description>
    <inlineHelpText>The date and time QA and UAT signoff needs to be sent to the IE.</inlineHelpText>
    <label>Signoff Required Date Time</label>
    <type>DateTime</type>
</CustomField>