force-app/main/default/objects/CM_Sprint__c/fields/Smoke_Test_Lead__c.field-meta.xml
<CustomField>
    <fullName>Smoke_Test_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Developer who is charged with validating all smoke tests during deploys.</description>
    <inlineHelpText>Developer who is charged with validating all smoke tests during deploys.</inlineHelpText>
    <label>Smoke Test Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sprints</relationshipName>
    <type>Lookup</type>
</CustomField>