force-app/main/default/objects/CM_Sprint__c/fields/Sprint_Demo_Date__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Demo_Date__c</fullName>
    <inlineHelpText>Date the sprint demo takes place</inlineHelpText>
    <label>Sprint Demo Date</label>
    <type>Date</type>
</CustomField>