force-app/main/default/objects/CM_Sprint__c/fields/Sprint_Planning_Date__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Planning_Date__c</fullName>
    <inlineHelpText>The date the sprint planning session takes place</inlineHelpText>
    <label>Sprint Planning Date</label>
    <type>Date</type>
</CustomField>