force-app/main/default/objects/CM_Sprint__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The status of the sprint, in general.  If some items are in development and some are in testing, be conservative and chose Development as the status.</description>
    <inlineHelpText>The status of the sprint, in general.  If some items are in development and some are in testing, be conservative and chose Development as the status.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planning</fullName>
                <default>true</default>
                <label>Planning</label>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Quality Assurance Testing</fullName>
            </value>
            <value>
                <fullName>User Acceptance Testing</fullName>
            </value>
            <value>
                <fullName>Awaiting Deployment</fullName>
            </value>
            <value>
                <fullName>Deployed</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>