force-app/main/default/objects/CM_Sprint__c/fields/Stream__c.field-meta.xml
<CustomField>
    <fullName>Stream__c</fullName>
    <description>This field specifies which deployment stream/path the change will follow.  For instance, if using the "Prod" stream, then development will begin on the "dev" org, and proceed thru to "froqa2" and finally "prod".</description>
    <inlineHelpText>Choose the development stream to which this sprint is related.</inlineHelpText>
    <label>Stream</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prod</fullName>
                <default>true</default>
                <label>Prod</label>
            </value>
            <value>
                <fullName>Membership</fullName>
            </value>
            <value>
                <fullName>MP2</fullName>
            </value>
            <value>
                <fullName>MX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>