force-app/main/default/objects/CM_Sprint__c/fields/Theme__c.field-meta.xml
<CustomField>
    <fullName>Theme__c</fullName>
    <description>General classification of the goal of this Sprint.  i.e. "Fixes to XYZ" or "Improvements to ABC".</description>
    <label>Theme</label>
    <length>255</length>
    <type>Text</type>
</CustomField>