force-app/main/default/objects/CM_Sprint__c/fields/UAT_Deploy_Date__c.field-meta.xml
<CustomField>
    <fullName>UAT_Deploy_Date__c</fullName>
    <description>The date all backlog items must be deployed to UAT</description>
    <inlineHelpText>The date all backlog items must be deployed to UAT</inlineHelpText>
    <label>UAT Deploy Date</label>
    <type>Date</type>
</CustomField>