force-app/main/default/objects/CM_Sprint__c/fields/UAT_Signoff_Approver__c.field-meta.xml
<CustomField>
    <fullName>UAT_Signoff_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who can send UAT signoff</description>
    <inlineHelpText>User who can send UAT signoff</inlineHelpText>
    <label>UAT Signoff Approver</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>Business Operations Manager</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Sprints2</relationshipName>
    <type>Lookup</type>
</CustomField>