force-app/main/default/objects/CM_Sprint__c/fields/UAT_Signoff_Date__c.field-meta.xml
<CustomField>
    <fullName>UAT_Signoff_Date__c</fullName>
    <description>The date all backlog items must be signed off in UAT</description>
    <inlineHelpText>The date all backlog items must be signed off in UAT</inlineHelpText>
    <label>UAT Signoff Date</label>
    <type>Date</type>
</CustomField>