force-app/main/default/objects/CM_Sprint__c/fields/UAT_Target__c.field-meta.xml
<CustomField>
    <fullName>UAT_Target__c</fullName>
    <description>Target sandbox for User Acceptance Testing</description>
    <label>UAT Target</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PUAT</fullName>
                <default>true</default>
                <label>PUAT</label>
            </value>
            <value>
                <fullName>MUAT</fullName>
            </value>
            <value>
                <fullName>MUAT2</fullName>
            </value>
            <value>
                <fullName>MQA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>