force-app/main/default/objects/CM_Sprint__c/listViews/Active.listView-meta.xml
<ListView>
    <fullName>Active</fullName>
    <columns>NAME</columns>
    <columns>Release_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Stream__c</columns>
    <columns>QA_Deploy_Date__c</columns>
    <columns>QA_Target__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active</label>
</ListView>