force-app/main/default/objects/CM_Sprint__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Stream__c</columns>
    <columns>Release_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>