force-app/main/default/objects/CM_Sprint__c/listViews/Membership.listView-meta.xml
<ListView>
    <fullName>Membership</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Project__c</columns>
    <columns>Active__c</columns>
    <columns>Sprint_Planning_Date__c</columns>
    <columns>Sprint_Demo_Date__c</columns>
    <columns>QA_Deploy_Date__c</columns>
    <columns>QA_Signoff_Date__c</columns>
    <columns>UAT_Deploy_Date__c</columns>
    <columns>UAT_Signoff_Date__c</columns>
    <columns>Release_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Membership</value>
    </filters>
    <label>Membership</label>
</ListView>