force-app/main/default/objects/CM_Sprint__c/listViews/Planned_Sprint.listView-meta.xml
<ListView>
    <fullName>Planned_Sprint</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Smoke_Test_Lead__c</columns>
    <columns>QA_Deploy_Date__c</columns>
    <columns>QA_Signoff_Date__c</columns>
    <columns>UAT_Deploy_Date__c</columns>
    <columns>UAT_Signoff_Date__c</columns>
    <columns>Release_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Planning,Development,Testing</value>
    </filters>
    <label>Planned Sprint</label>
</ListView>