force-app/main/default/objects/CM_Sprint__c/listViews/Sprints_with_Tags.listView-meta.xml
<ListView>
    <fullName>Sprints_with_Tags</fullName>
    <columns>NAME</columns>
    <columns>Base_Tag__c</columns>
    <columns>Release_Date__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Base_Tag__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Sprints with Tags</label>
</ListView>